--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <label for="eligibility">Are you Eligible?:</label><input type="checkbox" name="checking eligibility" id="eligibility"checked> 
         </div>
         <br>
+        <label for="write something">write something:</label>
         <div>
-           write something: <br><textarea name="" id="" cols="90" rows="5"></textarea>
+           <textarea name="" id="write something" cols="90" rows="5"></textarea>
         </div>         
         <br>
         <div>
@@ -72,8 +73,8 @@
         </div>
         <br>
         <div>
-           <input type="submit" value="submit form" >
-           <input type="reset" value="reset the form">
+            <label for="submit"></label> <input type="submit" value="submit form" id="submit" >
+            <label for="reset"></label><input type="reset" value="reset the form" id="reset">
         </div>
     </form>
 </head>
